--- a/templates/landing.twig
+++ b/templates/landing.twig
@@ -1,1 +1,18 @@
-<p>test</p>
+<!DOCTYPE html>
+
+<html lang="fr">
+
+    <head>
+        <title>Indice de fragilité numérique | INR</title>
+        <link rel="stylesheet" href="/assets/style.css"/>
+    </head>
+
+    <body>
+
+        <header>
+            <img src="/assets/logo-inr.jpg" alt="INR"/>
+        </header>
+
+    </body>
+
+</html>
