First attempt to design

--- a/templates/landing.twig
+++ b/templates/landing.twig
@@ -5,13 +5,77 @@
     <head>
         <title>Indice de fragilité numérique | INR</title>
         <link rel="stylesheet" href="/assets/style.css"/>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     </head>
 
     <body>
 
         <header>
-            <img src="/assets/logo-inr.jpg" alt="INR"/>
+            <img src="/assets/logo-inr.jpg" alt="INR" class="logo"/>
+            <input type="text" placeholder="Rechercher un lieu" class="search-field"/>
         </header>
+
+        <div class="stats">
+
+            <h1>Paris (75000)</h1>
+
+            <div class="top">
+
+                <div class="left">
+                    <div class="bloc stat">
+                        <p>Accès aux interfaces numériques</p>
+                        <h1 class="number">21</h1>
+                    </div>
+
+                    <div class="bloc stat">
+                        <p>Accès à l'information</p>
+                        <h1 class="number">71</h1>
+                    </div>
+
+                    <div class="bloc stat">
+                        <p>Compétences administratives</p>
+                        <h1 class="number">122</h1>
+                    </div>
+
+                    <div class="bloc stat">
+                        <p>Compétences numériques / scolaires</p>
+                        <h1 class="number">46</h1>
+                    </div>
+
+                    <div class="bloc stat">
+                        <p>Accès</p>
+                        <h1 class="number">46</h1>
+                    </div>
+
+                    <div class="bloc stat">
+                        <p>Compétences</p>
+                        <h1 class="number">82</h1>
+                    </div>
+
+                    <div class="bloc stat">
+                        <p>Score global</p>
+                        <h1 class="number">64</h1>
+                    </div>
+                </div>
+
+                <div class="right">
+
+                    <div class="bloc map">
+                        <div class="bloc-header">
+                            <h2>Carte</h2>
+                        </div>
+                        <img src="/assets/map.png"/>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="show-more">
+                <p class="grey">En savoir plus</p>
+            </div>
+
+        </div>
 
     </body>
 
