--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -2,10 +2,139 @@
 html, body {
     width: 100%;
     margin: 0;
+    background-color: white;
+    font-family: Arial;
+}
+
+input:focus, textarea:focus {
+    outline: none;
+}
+
+.grey {
+    color: #8c98a4;
+}
+
+.blue {
+    color: #0052ea;
+}
+
+.bloc {
+    border: 1px solid #ddd;
+    background-color: white;
+    box-shadow: 0 6px 12px rgba(140,152,164,.075);
+    border-radius: .75rem;
+    overflow: hidden;
+}
+
+.bloc-header {
+    width: 100%;
+    border-bottom: 1px solid #ddd;
+}
+
+.bloc-header h2 {
+    padding: 4px 16px;
+    font-size: 16px;
+    color: black;
+    font-weight: bold;
 }
 
 header {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 60px;
+    border-bottom: 1px solid #ddd;
+    display: flex;
+    padding: 0 10%;
+    -webkit-backdrop-filter: saturate(180%) blur(20px);
+    backdrop-filter: saturate(180%) blur(20px);
+}
 
+header .logo {
+    height: 50px;
+    margin-top: 5px;
+}
+
+header .search-field {
+    width: 50%;
+    max-width: 600px;
+    height: 40px;
+    margin-top: 10px;
+    margin-left: 20px;
+    border: none;
+    font-size: 16px;
+    border-radius: 8px;
+    padding: 0 12px;
+    transition: 0.3s;
+}
+
+header .search-field:hover, header .search-field:focus {
+    background-color: #eee;
+    transition: 0.3s;
+}
+
+.stats {
+    width: 80%;
+    margin: 70px auto 0;
+}
+
+.stats .top {
+    display: flex;
+    justify-content: space-between;
+}
+
+.stats .top .left {
+    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.stats .top .left .stat {
+    width: 250px;
+    height: 100px;
+    padding: 6px 12px;
+    margin: 6px;
+}
+
+.stats .top .left .stat .number {
+    margin: 0;
+    font-size: 28px;
+    transition: 0.3s;
+}
+
+.stats .top .left .stat:hover .number {
+    color: #0052ea;
+    transition: 0.3s;
+}
+
+.stats .top .right {
+    width: 48%;
+}
+
+.stats .top .right .map {
+    margin-top: 6px;
+}
+
+.stats .top .right .map img {
+    width: 100%;
+}
+
+.stats .show-more {
+    width: 150px;
+    height: 28px;
+    border: 1px solid #ddd;
+    border-radius: 14px;
+    margin: 0 auto;
+}
+
+.stats .show-more p {
+    margin: 0;
+    text-align: center;
+    font-size: 13px;
+    line-height: 28px;
+}
+
+.stats .show-more:hover {
+    cursor: pointer;
 }
