Added search elements to design

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -73,3 +73,108 @@ header .search-field:hover, header .search-field:focus {
     background-color: #eee;
     transition: 0.3s;
 }
+
+.no-cities {
+    width: 60%;
+    margin: 0 auto;
+}
+
+.no-cities img {
+    width: 100%;
+}
+
+.content {
+    width: 80%;
+    margin: 70px auto 0;
+}
+
+.search-results {
+    border-radius: 0.75rem;
+    overflow: hidden;
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+}
+
+.search-results .result {
+    padding: 6px 20px;
+    border: 1px solid #ddd;
+    border-bottom: none;
+    display: flex;
+    transition: 0.3s;
+}
+
+.search-results .result:hover {
+    background-color: #eee;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.search-results .result-first {
+    border-top: none;
+}
+
+.search-results .result .name {
+    width: 40%;
+    max-width: 350px;
+    text-overflow: ellipsis;
+}
+
+.stats .top {
+    display: flex;
+    justify-content: space-between;
+}
+
+.stats .top .left {
+    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.stats .top .left .stat {
+    width: 250px;
+    height: 100px;
+    padding: 6px 12px;
+    margin: 6px;
+}
+
+.stats .top .left .stat .number {
+    margin: 0;
+    font-size: 28px;
+    transition: 0.3s;
+}
+
+.stats .top .left .stat:hover .number {
+    color: #0052ea;
+    transition: 0.3s;
+}
+
+.stats .top .right {
+    width: 48%;
+}
+
+.stats .top .right .map {
+    margin-top: 6px;
+}
+
+.stats .top .right .map img {
+    width: 100%;
+}
+
+.stats .show-more {
+    width: 150px;
+    height: 28px;
+    border: 1px solid #ddd;
+    border-radius: 14px;
+    margin: 0 auto;
+}
+
+.stats .show-more p {
+    margin: 0;
+    text-align: center;
+    font-size: 13px;
+    line-height: 28px;
+}
+
+.stats .show-more:hover {
+    cursor: pointer;
+}
