--- a/templates/landing.twig
+++ b/templates/landing.twig
@@ -5,7 +5,6 @@
     <head>
         <title>Indice de fragilité numérique | INR</title>
         <link rel="stylesheet" href="/assets/css/style.css"/>
-        <link rel="stylesheet" href="/assets/css/landing.css"/>
     </head>
 
     <body>
@@ -15,9 +14,106 @@
             <input type="text" placeholder="Rechercher un lieu" class="search-field"/>
         </header>
 
+        <!--
+        ===== NO SELECTION =====
         <div class="no-cities">
             <img src="/assets/images/fogg-203.png" alt="Aucun lieu sélectionné">
+        </div>-->
+
+
+        <!--
+        ===== SEARCH RESULTS =====
+        <div class="content search-results">
+
+            <div class="result result-first">
+                <p class="name">Paris (premier arrondissement)</p>
+                <p class="postal-code grey">75001</p>
+            </div>
+            <div class="result">
+                <p class="name">Paris (deuxième arrondissement)</p>
+                <p class="postal-code grey">75002</p>
+            </div>
+            <div class="result">
+                <p class="name">Paris (troisième arrondissement)</p>
+                <p class="postal-code grey">75003</p>
+            </div>
+            <div class="result">
+                <p class="name">Paris (quatrième arrondissement)</p>
+                <p class="postal-code grey">75004</p>
+            </div>
+            <div class="result">
+                <p class="name">Paris (cinquième arrondissement)</p>
+                <p class="postal-code grey">75005</p>
+            </div>
+
         </div>
+        -->
+
+
+        <!---
+        ===== STATS FOR A PLACE =====
+        -->
+        <div class="content stats">
+
+        <h1>Paris (75000)</h1>
+
+        <div class="top">
+
+            <div class="left">
+                <div class="bloc stat">
+                    <p>Accès aux interfaces numériques</p>
+                    <h1 class="number">21</h1>
+                </div>
+
+                <div class="bloc stat">
+                    <p>Accès à l'information</p>
+                    <h1 class="number">71</h1>
+                </div>
+
+                <div class="bloc stat">
+                    <p>Compétences administratives</p>
+                    <h1 class="number">122</h1>
+                </div>
+
+                <div class="bloc stat">
+                    <p>Compétences numériques / scolaires</p>
+                    <h1 class="number">46</h1>
+                </div>
+
+                <div class="bloc stat">
+                    <p>Accès</p>
+                    <h1 class="number">46</h1>
+                </div>
+
+                <div class="bloc stat">
+                    <p>Compétences</p>
+                    <h1 class="number">82</h1>
+                </div>
+
+                <div class="bloc stat">
+                    <p>Score global</p>
+                    <h1 class="number">64</h1>
+                </div>
+            </div>
+
+            <div class="right">
+
+                <div class="bloc map">
+                    <div class="bloc-header">
+                        <h2>Carte</h2>
+                    </div>
+                    <img src="/assets/images/map.png"/>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="show-more">
+            <p class="grey">En savoir plus</p>
+        </div>
+
+    </div>
 
     </body>
 
