--- a/templates/landing.twig
+++ b/templates/landing.twig
@@ -18,7 +18,8 @@
         ===== NO SELECTION =====
         <div class="no-cities">
             <img src="/assets/images/fogg-203.png" alt="Aucun lieu sélectionné">
-        </div>-->
+        </div>
+        -->
 
 
         <!--
@@ -52,7 +53,6 @@
 
         <!---
         ===== STATS FOR A PLACE =====
-        -->
         <div class="content stats">
 
         <h1>Paris (75000)</h1>
@@ -114,6 +114,7 @@
         </div>
 
     </div>
+    -->
 
     </body>
 
