--- a/templates/landing.twig
+++ b/templates/landing.twig
@@ -53,9 +53,19 @@
 
         <!---
         ===== STATS FOR A PLACE =====
+        -->
         <div class="content stats">
 
-        <h1>Paris (75000)</h1>
+            <div class="stats-header">
+                <h1>Paris (75000)</h1>
+
+                <div class="center-vertically">
+                    <div class="btn">
+                        <p>Télécharger</p>
+                    </div>
+                </div>
+            </div>
+
 
         <div class="top">
 
@@ -113,8 +123,7 @@
             <p class="grey">En savoir plus</p>
         </div>
 
-    </div>
-    -->
+        </div>
 
     </body>
 
