--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -92,13 +92,21 @@ header .logo {
     margin-top: 5px;
 }
 
-header .search-field {
+header .search-bloc {
     width: 50%;
     max-width: 600px;
+}
+
+header #search_input_container {
+    width: 100%;
+}
+
+header .search-field {
+    width: 100%;
     height: 40px;
     margin-top: 10px;
     margin-left: 20px;
-    border: none;
+    border: 1px solid transparent;
     font-size: 16px;
     border-radius: 8px;
     padding: 0 12px;
@@ -109,6 +117,10 @@ header .search-field {
 header .search-field:hover, header .search-field:focus {
     background-color: rgba(235, 235, 235, 0.6);
     transition: 0.3s;
+}
+
+header .search-field:focus {
+    border: 1px solid #ddd;
 }
 
 .no-cities {
@@ -131,10 +143,16 @@ header .search-field:hover, header .search-field:focus {
 }
 
 .search-results {
-    border-radius: 0.75rem;
+    width: calc(100% + 26px);
+    border-radius: 0 0 0.75rem 0.75rem;
     overflow: hidden;
     border-top: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
+    border-radius: 0.75rem;
+    margin-left: 20px;
+    margin-top: 6px;
+    background-color: white;
+    z-index: 2;
 }
 
 .search-results .result {
@@ -151,7 +169,7 @@ header .search-field:hover, header .search-field:focus {
     transition: 0.3s;
 }
 
-.search-results .result-first {
+.search-results .result:first-child {
     border-top: none;
 }
 
