--- a/templates/landing.twig
+++ b/templates/landing.twig
@@ -11,59 +11,22 @@
 
     <body>
 
-<header>
-    <img src="/assets/images/logo-inr.jpg" alt="INR" class="logo"/>
-    <div id="search_input_container"></div>
-</header>
+        <header>
+            <img src="/assets/images/logo-inr.jpg" alt="INR" class="logo"/>
 
-        <!--
-        ===== NO SELECTION =====
-        <div class="no-cities">
-            <img src="/assets/images/fogg-203.png" alt="Aucun lieu sélectionné">
+            <div class="search-bloc">
+                <div id="search_input_container"></div>
+                <div id="search_result_container"></div>
+            </div>
+
+        </header>
+
+        <div class="content stats">
+            <div id="city_statistic_container"></div>
         </div>
-        -->
 
+        <script type="module" src="assets/js/main.js"></script>
 
-        <!--
-        ===== SEARCH RESULTS =====
-        <div class="content search-results">
-
-            <div class="result result-first">
-                <p class="name">Paris (premier arrondissement)</p>
-                <p class="postal-code grey">75001</p>
-            </div>
-            <div class="result">
-                <p class="name">Paris (deuxième arrondissement)</p>
-                <p class="postal-code grey">75002</p>
-            </div>
-            <div class="result">
-                <p class="name">Paris (troisième arrondissement)</p>
-                <p class="postal-code grey">75003</p>
-            </div>
-            <div class="result">
-                <p class="name">Paris (quatrième arrondissement)</p>
-                <p class="postal-code grey">75004</p>
-            </div>
-            <div class="result">
-                <p class="name">Paris (cinquième arrondissement)</p>
-                <p class="postal-code grey">75005</p>
-            </div>
-
-        </div>
-        -->
-
-
-<!---
-===== STATS FOR A PLACE =====
--->
-<div class="content stats">
-
-    <div id="search_result_container"></div>
-    <div id="city_statistic_container"></div>
-
-</div>
-
-<script type="module" src="assets/js/main.js"></script>
-</body>
+    </body>
 
 </html>
