Added a propper download btn component

--- a/templates/landing.twig
+++ b/templates/landing.twig
@@ -5,8 +5,6 @@
     <head>
         <title>Indice de fragilité numérique | INR</title>
         <link rel="stylesheet" href="/assets/css/style.css"/>
-        <script src="/assets/js/html2pdf.node.js"></script>
-        <script src="/assets/js/generatePDF.js"></script>
     </head>
 
     <body>
@@ -25,7 +23,8 @@
             <div id="city_statistic_container"></div>
         </div>
 
-        <script type="module" src="assets/js/main.js"></script>
+        <script src="/assets/js/html2pdf.node.js"></script>
+        <script type="module" src="/assets/js/main.js"></script>
 
     </body>
 
