Cleaned a little bit the code

--- a/templates/landing.twig
+++ b/templates/landing.twig
@@ -19,7 +19,7 @@
 
         </header>
 
-        <div class="content stats">
+        <div class="content stats" id="stats">
             <div id="city_statistic_container"></div>
         </div>
 
