--- a/templates/landing.twig
+++ b/templates/landing.twig
@@ -10,7 +10,7 @@
     <body>
 
         <header>
-            <img src="/assets/images/logo-inr.jpg" alt="INR" class="logo"/>
+            <img src="/assets/images/logo-inr.png" alt="INR" class="logo"/>
 
             <div class="search-bloc">
                 <div id="search_input_container"></div>
