--- a/templates/landing.twig
+++ b/templates/landing.twig
@@ -23,6 +23,12 @@
             <div id="city_statistic_container"></div>
         </div>
 
+        <footer>
+            <p>Site réalisé par <b>l'équipe 48</b>.</p>
+            <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licence Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a>
+            <p>Ce(tte) œuvre est mise à disposition selon les termes de la <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Licence Creative Commons Attribution -  Partage dans les Mêmes Conditions 4.0 International</a>.</p>
+        </footer>
+
         <script src="/assets/js/html2pdf.node.js"></script>
         <script type="module" src="/assets/js/main.js"></script>
 
