--- a/templates/landing.twig
+++ b/templates/landing.twig
@@ -20,11 +20,13 @@
         </header>
 
         <div class="content stats" id="stats">
+            <div class="tooltip" id="map"></div>
             <div id="city_statistic_container"></div>
         </div>
 
         <script src="/assets/js/html2pdf.node.js"></script>
         <script type="module" src="/assets/js/main.js"></script>
+        <script src="https://d3js.org/d3.v6.min.js"></script>
 
     </body>
 
