--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -311,3 +311,17 @@ header .search-field:focus {
         width: 100%;
     }
 }
+
+div.tooltip {
+    position: absolute;
+    text-align: center;
+    color: black;
+    width: 275px;
+    height: 37px;
+    padding: 2px;
+    font: 12px sans-serif;
+    background: grey;
+    border: 0px;
+    border-radius: 8px;
+    pointer-events: none;
+}
