--- a/templates/landing.twig
+++ b/templates/landing.twig
@@ -5,6 +5,7 @@
     <head>
         <title>Indice de fragilité numérique | INR</title>
         <link rel="stylesheet" href="/assets/css/style.css"/>
+        <link rel="icon" type="image/ico" href="/assets/images/favicon.ico"/>
     </head>
 
     <body>
