--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -100,10 +100,11 @@ header .search-bloc {
 
 header #search_input_container {
     width: 100%;
+    position: relative;
 }
 
 header .search-field {
-    width: 100%;
+    width: calc(100% - 44px);
     height: 40px;
     margin-top: 10px;
     margin-left: 20px;
@@ -122,6 +123,36 @@ header .search-field:hover, header .search-field:focus {
 
 header .search-field:focus {
     border: 1px solid #ddd;
+}
+
+header #search_form_loader {
+    width: 34px;
+    height: 34px;
+    position: absolute;
+    right: 12px;
+    top: 14px;
+    border-radius: 50%;
+}
+
+header #search_form_loader #search-field-loader {
+    display: none;
+    width: calc(100% - 4px);
+    height: calc(100% - 4px);
+    border-radius: 50%;
+    border: 2px solid #ddd;
+    border-top: 2px solid #999;
+    -webkit-animation:spin 2s linear infinite;
+    -moz-animation:spin 2s linear infinite;
+    animation:spin 2s linear infinite;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(359deg);
+    }
 }
 
 .no-cities {
