--- a/templates/landing.twig
+++ b/templates/landing.twig
@@ -4,14 +4,14 @@
 
     <head>
         <title>Indice de fragilité numérique | INR</title>
-        <link rel="stylesheet" href="/assets/css/style.css"/>
-        <link rel="icon" type="image/ico" href="/assets/images/favicon.ico"/>
+        <link rel="stylesheet" href="http://{{ baseUrl }}/assets/css/style.css"/>
+        <link rel="icon" type="image/ico" href="http://{{ baseUrl }}/assets/images/favicon.ico"/>
     </head>
 
     <body>
 
         <header>
-            <img src="/assets/images/logo-inr.png" alt="INR" class="logo"/>
+            <img src="http://{{ baseUrl }}/assets/images/logo-inr.png" alt="INR" class="logo"/>
 
             <div class="search-bloc">
                 <div id="search_input_container"></div>
@@ -30,8 +30,8 @@
             <p>Ce(tte) œuvre est mise à disposition selon les termes de la <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Licence Creative Commons Attribution -  Partage dans les Mêmes Conditions 4.0 International</a>.</p>
         </footer>
 
-        <script src="/assets/js/html2pdf.node.js"></script>
-        <script type="module" src="/assets/js/main.js"></script>
+        <script src="http://{{ baseUrl }}/assets/js/html2pdf.node.js"></script>
+        <script type="module" src="http://{{ baseUrl }}/assets/js/main.js"></script>
 
     </body>
 
