--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -186,15 +186,20 @@ header #search_form_loader #search-field-loader {
     padding-top: 10px;
 }
 
+.search-results::-webkit-scrollbar {
+    display: none;
+}
+
 .search-results {
-    width: calc(100% + 26px);
-    overflow: hidden;
+    width: calc(100% - 20px);
+    overflow-y: scroll;
     border-top: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
     border-radius: 0.75rem;
     margin-left: 20px;
     margin-top: 6px;
     background-color: white;
+    max-height: 400px;
     z-index: 2;
 }
 
