Tweaked the switch

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -276,13 +276,14 @@ header #search_form_loader #search-field-loader {
     display: flex;
     background-color: #eee;
     border-radius: 0.75rem;
+    box-shadow: inset 0 6px 6px rgba(140,152,164,.275);
     margin: 10px 0;
 }
 
 .stats .switch-comparison .switch-btn {
     padding: 6px 20px;
     cursor: pointer;
-    border-radius: 0.25rem;
+    border-radius: 0.75rem;
 }
 
 .stats .switch-comparison .switch-btn:first-child {
