--- a/templates/landing.twig
+++ b/templates/landing.twig
@@ -10,7 +10,7 @@
 
     <body>
 
-        <header>
+        <header id="header" class="header-extended">
             <img src="http://{{ baseUrl }}/assets/images/logo-inr.png" alt="INR" class="logo"/>
 
             <div class="search-bloc">
