Filled the landing page

--- a/templates/landing.twig
+++ b/templates/landing.twig
@@ -14,7 +14,26 @@
             <img src="http://{{ baseUrl }}/assets/images/logo-inr.png" alt="INR" class="logo"/>
 
             <div class="search-bloc">
+                <h1 class="header-extended-only">Rechercher l'indice de fragilité numérique d'une ville</h1>
                 <div id="search_input_container"></div>
+                <p class="header-explain header-extended-only">
+                    L’indice de fragilité numérique révèle la probabilité que sur
+                    un territoire donné, une partie significative de la population
+                    ciblée se trouve en situation d’exclusion numérique. Les
+                    indicateurs produits sur la base de cet indice sont donc des
+                    projections de risques, qu’il convient, dans la mesure du
+                    possible, de recouper par une enquête qualitative ou les
+                    données d’enquêtes sociologiques.
+                </p>
+                <p class="header-explain header-extended-only">
+                    L’indice de fragilité numérique des territoires a été produit dans le cadre de l’IncubO du SGAR
+                    Occitanie avec le concours de l’ANSA en partenariat avec la Mednum, grâce au soutien du Fond de
+                    transformation pour l’action publique.
+                </p>
+                <p class="header-explain header-extended-only">
+                    Cet outil a été développé en suivant une approche éco-responsable.
+                </p>
+
                 <div id="search_result_container"></div>
             </div>
 
