--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -181,6 +181,10 @@ header #search_form_loader #search-field-loader {
     }
 }
 
+header .header-extended-only {
+    display: none;
+}
+
 .header-extended {
     display: block;
     height: calc(100vh - 120px);
@@ -191,7 +195,7 @@ header #search_form_loader #search-field-loader {
 
 .header-extended .search-bloc {
     position: absolute;
-    top: calc(50vh - 80px);
+    top: 20vh;
     left: 20%;
     width: 60%;
     max-width: none;
@@ -199,8 +203,24 @@ header #search_form_loader #search-field-loader {
     margin: 0 auto;
 }
 
+.header-extended .header-extended-only {
+    display: block;
+}
+
+.header-extended .search-bloc h1 {
+    text-align: center;
+    color: #666;
+}
+
+.header-extended .search-bloc .header-explain {
+    font-size: 16px;
+    line-height: 1.5;
+    text-align: center;
+    color: #666;
+}
+
 .header-extended .search-bloc .search-field {
-    width: 100%;
+    width: calc(100% - 24px);
     margin: 0;
     height: 60px;
     border: 1px solid transparent;
@@ -210,6 +230,14 @@ header #search_form_loader #search-field-loader {
     transition: 0.3s;
     background-color: rgba(255, 255, 255, 0.6);
     border: 1px solid #ddd;
+}
+
+.header-extended .search-results {
+    position: absolute;
+    top: calc(20vh);
+    width: 100%;
+    left: 0;
+    margin: 0;
 }
 
 .no-cities {
